force-app/main/default/objects/Employee__c/fields/Aadhar_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_No__c</fullName>
    <label>Aadhar Card No:</label>
    <length>30</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>