force-app/main/default/objects/Employee__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>