force-app/main/default/objects/Employee__c/fields/Agency_Name_BVC__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_BVC__c</fullName>
    <label>Agency Name(BVC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BVCL</fullName>
            </value>
            <value>
                <fullName>BVCS</fullName>
            </value>
            <value>
                <fullName>BVCI</fullName>
            </value>
            <value>
                <fullName>BVCV,</fullName>
            </value>
            <value>
                <fullName>BVC BRINKS</fullName>
            </value>
            <value>
                <fullName>BVC Tradeport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>