force-app/main/default/objects/Employee__c/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <label>Bank Account No.</label>
    <length>30</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>