force-app/main/default/objects/Employee__c/fields/Biometric_Code__c.field-meta.xml
<CustomField>
    <fullName>Biometric_Code__c</fullName>
    <label>Biometric Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>