force-app/main/default/objects/Employee__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CTC</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>