force-app/main/default/objects/Employee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BVCL</fullName>
            </value>
            <value>
                <fullName>BVCS</fullName>
            </value>
            <value>
                <fullName>BVCI</fullName>
            </value>
            <value>
                <fullName>BVCV</fullName>
            </value>
            <value>
                <fullName>BVC Brinks</fullName>
            </value>
            <value>
                <fullName>BVC Tradeport</fullName>
            </value>
            <value>
                <fullName>Vamaship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>