force-app/main/default/objects/Employee__c/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <label>Current Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>