force-app/main/default/objects/Employee__c/fields/Current_City__c.field-meta.xml
<CustomField>
    <fullName>Current_City__c</fullName>
    <label>Current City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>