force-app/main/default/objects/Employee__c/fields/Current_Country__c.field-meta.xml
<CustomField>
    <fullName>Current_Country__c</fullName>
    <label>Current Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>