force-app/main/default/objects/Employee__c/fields/Current_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Current_Pincode__c</fullName>
    <label>Current Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>