force-app/main/default/objects/Employee__c/fields/Current_Station__c.field-meta.xml
<CustomField>
    <fullName>Current_Station__c</fullName>
    <label>Current Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>