force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/c</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>eSHIP</fullName>
            </value>
            <value>
                <fullName>Customs Brokerage</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounts</fullName>
            </value>
            <value>
                <fullName>E-Ship &amp; Customer Happiness Desk</fullName>
            </value>
            <value>
                <fullName>Credit Control &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Customer Happiness Desk</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>HR &amp; Administration</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Research &amp; Projects</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Operation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>