force-app/main/default/objects/Employee__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;J</fullName>
            </value>
            <value>
                <fullName>Eship</fullName>
            </value>
            <value>
                <fullName>Eship &amp; CS</fullName>
            </value>
            <value>
                <fullName>Corpex</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Valship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>