force-app/main/default/objects/Employee__c/fields/ESIC_No__c.field-meta.xml
<CustomField>
    <fullName>ESIC_No__c</fullName>
    <label>ESIC No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>