force-app/main/default/objects/Employee__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>