force-app/main/default/objects/Employee__c/fields/Group_DOJ__c.field-meta.xml
<CustomField>
    <fullName>Group_DOJ__c</fullName>
    <label>Group DOJ</label>
    <type>Date</type>
</CustomField>