force-app/main/default/objects/Employee__c/fields/Gun_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Gun_License_Expiry_Date__c</fullName>
    <label>Gun License Expiry Date</label>
    <type>Date</type>
</CustomField>