force-app/main/default/objects/Employee__c/fields/Gunman_License_No__c.field-meta.xml
<CustomField>
    <fullName>Gunman_License_No__c</fullName>
    <label>Gunman License No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>