force-app/main/default/objects/Employee__c/fields/License_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry_date__c</fullName>
    <label>License Expiry date</label>
    <type>Date</type>
</CustomField>