force-app/main/default/objects/Employee__c/fields/License_issued_State__c.field-meta.xml
<CustomField>
    <fullName>License_issued_State__c</fullName>
    <label>License issued  State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>