force-app/main/default/objects/Employee__c/fields/Pay_Mode__c.field-meta.xml
<CustomField>
    <fullName>Pay_Mode__c</fullName>
    <label>Pay Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>