force-app/main/default/objects/Employee__c/fields/Permanent_Country__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Country__c</fullName>
    <label>Permanent Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>