force-app/main/default/objects/Employee__c/fields/Permanent_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Pincode__c</fullName>
    <label>Permanent Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>