force-app/main/default/objects/Employee__c/fields/Permanent_Station__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Station__c</fullName>
    <label>Permanent Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>