force-app/main/default/objects/Employee__c/fields/PF_No__c.field-meta.xml
<CustomField>
    <fullName>PF_No__c</fullName>
    <label>PF No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>