force-app/main/default/objects/Employee__c/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <label>Spouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>