force-app/main/default/objects/Employee__c/fields/Spouse_Title__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Title__c</fullName>
    <label>Spouse Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>