force-app/main/default/objects/Employee__c/fields/UAN__c.field-meta.xml
<CustomField>
    <fullName>UAN__c</fullName>
    <label>UAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>