force-app/main/default/objects/Employee__c/fields/Vaccination_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Certificate__c</fullName>
    <label>Vaccination Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>