force-app/main/default/objects/Employee__c/recordTypes/BVC_Employees.recordType-meta.xml
<RecordType>
    <fullName>BVC_Employees</fullName>
    <active>true</active>
    <label>BVC Employees</label>
</RecordType>