force-app/main/default/objects/Employee__c/recordTypes/Outsourced_Employees.recordType-meta.xml
<RecordType>
    <fullName>Outsourced_Employees</fullName>
    <active>true</active>
    <label>Outsourced Employees</label>
</RecordType>