force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Company__c</columns>
    <columns>Mobile_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>